# movie-mover

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
classifier/: sort_movies.py
