[tool.pdm]

[project]
name = "sort_movies"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Brunson", email = "git@jacobbrunson.com"},
]
dependencies = [
    "openai>=1.3.3",
    "typer[all]>=0.10.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
